14017
Given this file in java:
{code}
public class A {
  public interface B { }
}
{code}
And this one in scala:
{code}
import A._
import B._
{code}
If you try to compile them together, scalac complains:
{code}
B.scala:2: error: not found: value B
import B._
       ^
{code}
If you add anything to B, it succeeds.  If you first compile the java file and then compile the scala file (while keeping quite about the java source file) it succeeds.  However this is still an issue for projects like mine which use tagging interfaces and pass all java files to scalac.
